/*
 * Copyright 2022 Google LLC
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *    https://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

package stability.model;

option java_package = "com.google.devtools.common.metrics.stability.model.proto";
option java_outer_classname = "ErrorTypeProto";

// Error type of an ErrorId for error classification.
enum ErrorType {
  // Unclassified errors for legacy error which hasn't been classified.
  UNCLASSIFIED = 0;
  // Errors caused by the infrastructure.
  INFRA_ISSUE = 1;
  // Errors caused by the input of end users. If the input can be from users or
  // infra components, use UNDETERMINED instead. Once you determine the source
  // of the input, you can further classify the error as CUSTOMER_ISSUE or
  // INFRA_ISSUE accordingly.
  CUSTOMER_ISSUE = 2;
  // Errors caused by the underlying tools, hardware, device OS, etc. that
  // the current infra depends on.
  DEPENDENCY_ISSUE = 3;
  // The errors have been classified but failed to determine their categories.
  UNDETERMINED = 4;
}
